added .fit() note

--- a/examples/01-python-introduction.ipynb
+++ b/examples/01-python-introduction.ipynb
@@ -493,7 +493,11 @@
         "\n",
         "# access columns and rows\n",
         "\n",
-        "# keep only certain columns"
+        "# keep only certain columns\n",
+        "\n",
+        "# with lots of extra time\n",
+        "\n",
+        "# show with regression the .fit() set up"
       ],
       "metadata": {
         "id": "kfp3ukkOXILm"
