--- a/examples/tweet demo.ipynb
+++ b/examples/tweet demo.ipynb
@@ -94,6 +94,8 @@
         "trump = pd.DataFrame(json.load(open('econ484/data/trump_tweets.json',encoding='utf8')))\n",
         "\n",
         "print(obama.head())\n",
+        "\n",
+        "# test\n",
         "print(trump.head())"
       ],
       "execution_count": null,
