fixed tweet demo

--- a/examples/tweet demo.ipynb
+++ b/examples/tweet demo.ipynb
@@ -234,7 +234,7 @@
       },
       "source": [
         "# visualize decision tree\n",
-        "tree.plot_tree(dtree,filled=True)\n",
+        "tree.plot_tree(dtree, feature_names=vectorizer.get_feature_names_out() ,filled=True)\n",
         "plt.show()"
       ],
       "execution_count": null,
