--- a/examples/pca.ipynb
+++ b/examples/pca.ipynb
@@ -26,7 +26,7 @@
         "!git clone https://github.com/brighamfrandsen/econ484.git\n",
         "%cd econ484/utilities\n",
         "from preamble import *\n",
-        "%cd content/econ484/data\n",
+        "%cd ../data\n",
         "\n",
         "plt.rcParams['image.cmap'] = \"gray\""
       ]
@@ -70,7 +70,7 @@
       },
       "outputs": [],
       "source": [
-        "housedata=pd.read_csv('./housingprices.csv',nrows=10)\n",
+        "housedata=pd.read_csv('housingprices.csv',nrows=10)\n",
         "print(housedata.head())\n",
         "print(\"Shape: {}\".format(str(housedata.shape)))"
       ]
