--- a/examples/clustering.ipynb
+++ b/examples/clustering.ipynb
@@ -19,9 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "%matplotlib inline\n",
         "# Import necessary libraries\n",
-        "#!pip install mglearn\n",
         "!git clone https://github.com/brighamfrandsen/econ484.git\n",
         "%cd econ484/utilities\n",
         "from preamble import *\n",
@@ -184,7 +182,6 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.datasets import make_blobs\n",
         "X_varied, y_varied = make_blobs(n_samples=200,\n",
         "                                cluster_std=[1.0, 2.5, 0.5],\n",
         "                                random_state=170)\n",
@@ -414,7 +411,7 @@
         "from sklearn.cluster import DBSCAN\n",
         "X, y = make_blobs(random_state=0, n_samples=12)\n",
         "\n",
-        "dbscan = DBSCAN(min_samples=2,eps=1.5)\n",
+        "dbscan = DBSCAN(min_samples=2,eps=.1)\n",
         "clusters = dbscan.fit_predict(X)\n",
         "print(\"Cluster memberships:\\n{}\".format(clusters))"
       ]
@@ -465,6 +462,15 @@
         "To try on your own: load the housing data and create clusters of houses using a couple of the methods above.\n",
         "First, load the housing data:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zVG4oXPE0gy_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
