--- a/examples/ROC example.ipynb
+++ b/examples/ROC example.ipynb
@@ -19,7 +19,6 @@
       },
       "outputs": [],
       "source": [
-        "%matplotlib inline\n",
         "# Import necessary libraries\n",
         "!git clone https://github.com/brighamfrandsen/econ484.git\n",
         "%cd econ484/utilities\n",
@@ -109,6 +108,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# do on your own"
+      ],
+      "metadata": {
+        "id": "UkJCkkhED4A1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "h9XSTtk2QKaV"
@@ -185,7 +195,6 @@
       "source": [
         "tpr=[0]*100\n",
         "fpr=[0]*100\n",
-        "\n",
         "for i in range(100):\n",
         "     tau=i/100\n",
         "     yhat_test=phat_test>=tau\n",
@@ -195,7 +204,8 @@
         "     n=sum(1-y_test)\n",
         "     fp=sum(yhat_test*(1-y_test))\n",
         "     fpr[i]=fp/n\n",
-        "     # on your own: calculate false negative rate:\n"
+        "     # on your own: calculate false negative rate:\n",
+        "\n"
       ]
     },
     {
@@ -253,7 +263,7 @@
         "id": "zo1rAA2RJWUP"
       },
       "source": [
-        "To do on your own: repeat, but standardizing the x-variables and using Lasso to penalize the logit coefficients. Any improvement to AUC?"
+        "To do on your own: repeat, but standardizing the x-variables and using Ridge to penalize the logit coefficients. Any improvement to AUC?"
       ]
     },
     {
@@ -264,7 +274,7 @@
       },
       "outputs": [],
       "source": [
-        "# standardize\n"
+        "# standardize using the training observations, but apply the standardization to the test observations\n"
       ]
     },
     {
@@ -286,7 +296,43 @@
         "id": "eXs7PMF_kUAU"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# get predicted probabilities from test observations\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calculate TPR and FPR for range of probability thresholds\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EqP2ifykMWzz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calculate AUC\n"
+      ],
+      "metadata": {
+        "id": "VJYeZG3xMclp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# On your own: instead of ROC Curve, plot Overall Accuracy Rate vs. Probability threshold\n"
+      ],
+      "metadata": {
+        "id": "xc5KhRuDOX_d"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
