--- a/examples/movies IV.ipynb
+++ b/examples/movies IV.ipynb
@@ -282,10 +282,10 @@
         "# first grow random forest:\n",
         "rf.fit(Z,d)\n",
         "# now get random forest predictions to use as instrument:\n",
-        "dtilde=rf.predict(Z)\n",
+        "dtilde=rf.predict(Z).reshape(-1,1)\n",
         "# do \"first stage\" using random forest predictions as instrument:\n",
-        "fs_rf=ols.fit(dtilde.reshape(-1,1),d)\n",
-        "dhat_rf=fs_rf.predict(dtilde.reshape(-1,1))\n",
+        "fs_rf=ols.fit(dtilde,d)\n",
+        "dhat_rf=fs_rf.predict(dtilde)\n",
         "# finally, 2nd stage regression:\n",
         "tsls_rf=ols.fit(dhat_rf,y)\n",
         "print('2SLS+Random Forest coefficient: ',tsls_rf.coef_)"
@@ -346,7 +346,7 @@
         "Z_scaled = scaler.transform(Z)\n",
         "\n",
         "# create lasso object, setting the penalty parameter\n",
-        "lasso=linear_model.Lasso(alpha=.1)\n",
+        "lasso=linear_model.LassoCV()\n",
         "\n",
         "# predict d using Z_scaled:\n",
         "lasso.fit(Z_scaled,d)\n",
@@ -363,6 +363,17 @@
         "print('Post-Lasso 2SLS coefficient: ',tsls_postlasso.coef_)\n",
         "print(lasso.coef_)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Z_selected.shape"
+      ],
+      "metadata": {
+        "id": "fn4mMoNqO167"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
