--- a/examples/Causal_via_Prediction.ipynb
+++ b/examples/Causal_via_Prediction.ipynb
@@ -548,7 +548,7 @@
         "id": "Da9pdvv1leOC"
       },
       "source": [
-        "ridgey = linear_model.RidgeCV(normalize=True).fit(X, y)\n",
+        "ridgey = linear_model.RidgeCV().fit(X, y)\n",
         "yresid=y-ridgey.predict(X)"
       ],
       "execution_count": null,
@@ -588,8 +588,8 @@
         "id": "Wkcwyi8ImBNa"
       },
       "source": [
-        "ridged = linear_model.RidgeCV(normalize=True).fit(X, d)\n",
-        "dresid=d-ridged.predict(X)"
+        "ridged = linear_model.RidgeCV().fit(X, d)\n",
+        "dresid=d-ridged.predict(X).reshape(-1,1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -676,7 +676,7 @@
         "  ridged.fit(X_train, d_train)\n",
         "\n",
         "  #but get residuals in test set\n",
-        "  dresid.iloc[test_index,:]=d_test-ridged.predict(X_test)\n",
+        "  dresid.iloc[test_index,:]=d_test-ridged.predict(X_test).reshape(-1,1)\n",
         "\n",
         "\n",
         "# Regress resids\n",
