--- a/examples/heterogeneous treatment effects.ipynb
+++ b/examples/heterogeneous treatment effects.ipynb
@@ -72,21 +72,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-ci9vGLY8veg"
-      },
-      "outputs": [],
-      "source": [
-        "# Import necessary libraries\n",
-        "!git clone https://github.com/brighamfrandsen/econ484.git\n",
-        "%cd econ484/utilities\n",
-        "from preamble import *\n",
-        "%cd content/econ484/data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "W94H6chGvjcm"
       },
       "outputs": [],
@@ -114,6 +99,21 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "sns.set_theme(style=\"whitegrid\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-ci9vGLY8veg"
+      },
+      "outputs": [],
+      "source": [
+        "# Import necessary libraries\n",
+        "!git clone https://github.com/brighamfrandsen/econ484.git\n",
+        "%cd econ484/utilities\n",
+        "from preamble import *\n",
+        "%cd ../data"
       ]
     },
     {
@@ -418,7 +418,7 @@
         "\n",
         "To do on your own:\n",
         "\n",
-        "- load the dataset from the url `https://github.com/Mixtape-Sessions/Heterogeneous-Effects/raw/main/Labs/data/jtpahet.csv`\n",
+        "- load the dataset `jtpahet.csv`\n",
         "- define the outcome vector (call it `y`) to be the column labeled `foundjob`\n",
         "- define the randomized assignment indicator (call it `z`) to be the column labeled `z`\n",
         "- define the feature vector (call it `x`) to be all columns except `foundjob`, `z`, and `enroll`.\n"
@@ -454,11 +454,8 @@
       },
       "outputs": [],
       "source": [
-        "data = pd.read_csv(\n",
-        "    \"https://github.com/Mixtape-Sessions/Heterogeneous-Effects/raw/main/Labs/data/jtpahet.csv\"\n",
-        ")\n",
+        "data = pd.read_csv(\"jtpahet.csv\")\n",
         "\n",
-        "# data = pd.read_csv('./jtpahet.csv?raw=true')\n",
         "data"
       ]
     },
