Commented out problems

--- a/examples/heterogeneous treatment effects.ipynb
+++ b/examples/heterogeneous treatment effects.ipynb
@@ -19,7 +19,7 @@
       "metadata": {
         "id": "meRFudtZ9bDb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,19 +144,8 @@
       ],
       "source": [
         "# Install econml\n",
-        "!pip install econml"
+        "#!pip install econml"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install --upgrade --force-reinstall pandas dateutil six"
-      ],
-      "metadata": {
-        "id": "QALjxm0mTaho"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -173,7 +162,7 @@
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn import tree\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from econml.dml import CausalForestDML as CausalForest\n",
+        "#from econml.dml import CausalForestDML as CausalForest\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "sns.set_theme(style=\"whitegrid\")"
