--- a/examples/heterogeneous treatment effects.ipynb
+++ b/examples/heterogeneous treatment effects.ipynb
@@ -13,6 +13,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# install econml (which requires re-installing scikit-learn and numpy)\n",
+        "!pip install --force-reinstall --no-cache-dir scikit-learn numpy econml"
+      ],
+      "metadata": {
+        "id": "iL3r4cs0dlBB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
@@ -72,85 +84,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "W94H6chGvjcm",
-        "outputId": "866f514d-acc5-41cd-d29f-4207bea892c0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting econml\n",
-            "  Downloading econml-0.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (38 kB)\n",
-            "Collecting numpy<2 (from econml)\n",
-            "  Downloading numpy-1.26.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m707.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: scipy>1.4.0 in /usr/local/lib/python3.11/dist-packages (from econml) (1.14.1)\n",
-            "Collecting scikit-learn<1.6,>=1.0 (from econml)\n",
-            "  Downloading scikit_learn-1.5.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\n",
-            "Collecting sparse (from econml)\n",
-            "  Downloading sparse-0.16.0-py2.py3-none-any.whl.metadata (5.3 kB)\n",
-            "Requirement already satisfied: joblib>=0.13.0 in /usr/local/lib/python3.11/dist-packages (from econml) (1.4.2)\n",
-            "Requirement already satisfied: statsmodels>=0.10 in /usr/local/lib/python3.11/dist-packages (from econml) (0.14.4)\n",
-            "Requirement already satisfied: pandas>1.0 in /usr/local/lib/python3.11/dist-packages (from econml) (2.2.2)\n",
-            "Collecting shap<0.44.0,>=0.38.1 (from econml)\n",
-            "  Downloading shap-0.43.0-cp311-cp311-manylinux_2_12_x86_64.manylinux2010_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (24 kB)\n",
-            "Requirement already satisfied: lightgbm in /usr/local/lib/python3.11/dist-packages (from econml) (4.5.0)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from econml) (24.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>1.0->econml) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas>1.0->econml) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>1.0->econml) (2025.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn<1.6,>=1.0->econml) (3.6.0)\n",
-            "Requirement already satisfied: tqdm>=4.27.0 in /usr/local/lib/python3.11/dist-packages (from shap<0.44.0,>=0.38.1->econml) (4.67.1)\n",
-            "Collecting slicer==0.0.7 (from shap<0.44.0,>=0.38.1->econml)\n",
-            "  Downloading slicer-0.0.7-py3-none-any.whl.metadata (3.7 kB)\n",
-            "Requirement already satisfied: numba in /usr/local/lib/python3.11/dist-packages (from shap<0.44.0,>=0.38.1->econml) (0.60.0)\n",
-            "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.11/dist-packages (from shap<0.44.0,>=0.38.1->econml) (3.1.1)\n",
-            "Requirement already satisfied: patsy>=0.5.6 in /usr/local/lib/python3.11/dist-packages (from statsmodels>=0.10->econml) (1.0.1)\n",
-            "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.11/dist-packages (from numba->shap<0.44.0,>=0.38.1->econml) (0.43.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>1.0->econml) (1.17.0)\n",
-            "Downloading econml-0.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m18.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading numpy-1.26.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.3/18.3 MB\u001b[0m \u001b[31m21.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading scikit_learn-1.5.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.3/13.3 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading shap-0.43.0-cp311-cp311-manylinux_2_12_x86_64.manylinux2010_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (532 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m532.9/532.9 kB\u001b[0m \u001b[31m17.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading slicer-0.0.7-py3-none-any.whl (14 kB)\n",
-            "Downloading sparse-0.16.0-py2.py3-none-any.whl (147 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.3/147.3 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: slicer, numpy, sparse, scikit-learn, shap, econml\n",
-            "  Attempting uninstall: slicer\n",
-            "    Found existing installation: slicer 0.0.8\n",
-            "    Uninstalling slicer-0.0.8:\n",
-            "      Successfully uninstalled slicer-0.0.8\n",
-            "  Attempting uninstall: numpy\n",
-            "    Found existing installation: numpy 2.0.2\n",
-            "    Uninstalling numpy-2.0.2:\n",
-            "      Successfully uninstalled numpy-2.0.2\n",
-            "  Attempting uninstall: scikit-learn\n",
-            "    Found existing installation: scikit-learn 1.6.1\n",
-            "    Uninstalling scikit-learn-1.6.1:\n",
-            "      Successfully uninstalled scikit-learn-1.6.1\n",
-            "  Attempting uninstall: shap\n",
-            "    Found existing installation: shap 0.47.1\n",
-            "    Uninstalling shap-0.47.1:\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Install econml\n",
-        "#!pip install econml"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "5H9c7Kgjtei1"
       },
       "outputs": [],
@@ -162,7 +95,6 @@
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn import tree\n",
         "from sklearn.model_selection import train_test_split\n",
-        "#from econml.dml import CausalForestDML as CausalForest\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "sns.set_theme(style=\"whitegrid\")"
@@ -359,6 +291,18 @@
       "source": [
         "## Random Causal Forest"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from econml.dml import CausalForestDML as CausalForest\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ddTO6wSxWjw2"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
