--- a/examples/04 Clustering.ipynb
+++ b/examples/04 Clustering.ipynb
@@ -35,7 +35,7 @@
         "id": "1_b8X-5KlhfV"
       },
       "source": [
-        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/clustering.ipynb)"
+        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/04 Clustering.ipynb)"
       ]
     },
     {
