Update 12 IV (movies).ipynb

--- a/examples/12 IV (movies).ipynb
+++ b/examples/12 IV (movies).ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/movies%20IV.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/12 IV (movies).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
