--- a/examples/14 Heterogeneous Treatment Effects.ipynb
+++ b/examples/14 Heterogeneous Treatment Effects.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/heterogeneous%20treatment%20effects.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/14 Heterogeneous Treatment Effects.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
