--- a/examples/01 Python Introduction.ipynb
+++ b/examples/01 Python Introduction.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/01 Python Introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/01%20Python%20Introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -18,24 +18,77 @@
       "source": [
         "Here's a brief introduction to Python.\n",
         "\n",
-        "These tools will give you all the tools you need to answer the exercise questions at the end of this notebook.\n",
-        "\n",
-        "If anyone is using `python 2.7`, you have to worry about about strange division between `int` and `float` but all of you should have `python 3.*` on your computer so it shouldn't be a problem.\n",
-        "\n",
-        "If you want to verify your version of python, run the cell below."
+        "These tools will give you all the tools you need to answer the exercise questions at the end of this notebook."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Allow me to introduce myself"
+      ],
+      "metadata": {
+        "id": "wWDAhbgNi-L0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This is a comment!\n",
+        "print(\"Hello, World!\")"
+      ],
+      "metadata": {
+        "id": "ZXm1C8coiQLi",
+        "outputId": "7527e3dd-6c2e-4233-fcca-0441e0e1b032",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "pJBKJkuUfSE0"
-      },
-      "outputs": [],
       "source": [
-        "import sys\n",
-        "print(sys.version.split()[0])"
+        "stringvariable = 'World'\n",
+        "print(\"Hello, {}!\".format(stringvariable))"
+      ],
+      "metadata": {
+        "id": "g-w-oZbCibo0",
+        "outputId": "a13b7839-65a6-4427-8f97-12c1800ac0dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now define a variable called 'name', assign it the value of your name, and introduce yourself via python!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rL5_0GXoitxC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -44,37 +97,6 @@
       },
       "source": [
         "### Introduction to basic classes and numeric python operations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jbty18zufSE1"
-      },
-      "outputs": [],
-      "source": [
-        "## Introduction to objects\n",
-        "# integers (\"int\"): This is how python stores whole numbers\n",
-        "a = 3\n",
-        "b = int(7)\n",
-        "print(type(a))\n",
-        "print(a+b)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GHJf9-4-fSE2"
-      },
-      "outputs": [],
-      "source": [
-        "# floats: This is how python stores real numbers that contain decimals\n",
-        "c = 3.14159265359\n",
-        "d = 2.718281828459\n",
-        "print(type(c))\n",
-        "print(c*d)"
       ]
     },
     {
@@ -222,11 +244,11 @@
         "a = 3\n",
         "b = 2\n",
         "c = 5\n",
-        "resonse = None\n",
+        "response = None\n",
         "\n",
         "if a*b > c: # if true then run the code right after it\n",
         "    response = True\n",
-        "else:      # if the conditoin above isn't true, do this instead.\n",
+        "else:      # if the condition above isn't true, do this instead.\n",
         "    response = False\n",
         "response"
       ]
@@ -275,13 +297,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "T2YhpmXtfSE7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0455fbf5-34d5-42df-dadc-88a899c15df0"
+        "outputId": "4a6f1e7b-ac28-4645-a501-dbc2c9e0aa9a"
       },
       "outputs": [
         {
@@ -303,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 6
         }
       ],
       "source": [
@@ -311,7 +333,7 @@
         "# We can make something called a \"list\" and do operations on the contents of the list\n",
         "mylist = [1,2,3,4,5]\n",
         "for num in mylist:\n",
-        "    num *= 2\n",
+        "    num = 2*num\n",
         "    print(num)\n",
         "mylist\n",
         "# we did operations on the list but we didn't change the list... What happened? -- Don't worry about it too much."
